Update Change student password use-case
