# src/student/domain/repository/student.repository.type.ts
@@ -31,6 +31,7 @@ export abstract class StudentRepository extends Repository {
 	): Promise<StudentEntity>;
 	abstract changeStudentPassword(
 		id: string,
-		password: string
+		password: string,
+		oldPassword: string
 	): Promise<void>;
 }
