# src/swagger.json
@@ -442,13 +442,18 @@
 								"properties": {
 									"password": {
 										"type": "string"
+									},
+									"oldPassword": {
+										"type": "string"
 									}
 								},
 								"example": {
-									"password": "john123"
+									"password": "john123",
+									"oldPassword": "john@123"
 								},
 								"required": [
-									"password"
+									"password",
+									"oldPassword"
 								]
 							}
 						}
